--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "nette/di": "~2.4.14 || ~3.0.0",
     "nette/utils": "~2.5.3 || ~3.0.0",
     "symfony/console": "^4.2.3",
-    "nettrine/dbal": "^0.2.0 || ^0.3.0",
+    "nettrine/dbal": "^dev-master",
     "doctrine/orm": "^2.6.3",
     "doctrine/cache": "^1.8.0",
     "doctrine/annotations": "^1.6.0"
